# loans

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: application_processor.py  full_flow_check.py  init_db.py  warm_cache.py
src/loans/: __init__.py  main.py
src/loans/application/: __init__.py  ports.py
src/loans/application/use_cases/: __init__.py  get_application_status.py  process_application.py  submit_application.py
src/loans/domain/: __init__.py  application.py
src/loans/infrastructure/: __init__.py
src/loans/infrastructure/cache/: __init__.py  in_memory_status_cache.py  redis_status_cache.py
src/loans/infrastructure/db/: __init__.py  models.py  session.py
src/loans/infrastructure/messaging/: __init__.py  in_memory.py  kafka.py
src/loans/infrastructure/repositories/: __init__.py  cached_repository.py  in_memory_applications.py  postgres_applications.py
src/loans/interfaces/: __init__.py
src/loans/interfaces/http/: __init__.py  dependencies.py  routes.py
src/loans/utils/: __init__.py  logging.py
tests/integration/: test_application_end_to_end.py  test_cache_behavior.py  test_http_health.py  test_real_services.py
