[tool.poetry]
name = "loans"
version = "0.1.0"
description = "Loans microservice following Clean Architecture principles."
authors = ["Loans Team <team@example.com>"]
readme = "AGENT.md"
packages = [{ include = "loans", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
redis = "^5.0.7"
aiokafka = "^0.10.0"
python-multipart = "^0.0.9"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.9.0"
types-setuptools = "^69.2.0.20240423"
pytest-asyncio = "^0.23.6"
httpx = { version = "^0.27.0", extras = ["http2"] }

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.mypy]
plugins = []
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
